syntax = "proto3";

package sgpt.v1;

// Represents a chat.
message Chat {
  // Uniquely identifies this chat.
  string id = 1;
  // Title of this chat.
  string title = 2;
  // Time at which a chat was created.
  int64 create_timestamp = 3;
  // Time at which a chat was updated.
  int64 update_timestamp = 4;
  // The messages of this chat.
  repeated Message messages = 5;
}

message Message {
  // Role of the message.
  Role role = 1;
  // Reasoning content.
  string reasoning_content = 2;
  // Content for this message.
  string content = 3;
  // A function call.
  FunctionCall function_call = 4;
}

message FunctionCall {
  // Name of the function being called.
  string name = 1;
  // Arguments for this function.
  string arguments = 2;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_SYSTEM = 1;
  ROLE_ASSISTANT = 2;
  ROLE_USER = 3;
}
